ci/visualizations-home.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizations-home
  labels:
    app: visualziations-home
spec:
  replicas: 3
  selector:
    matchLabels:
      app: visualizations-home
  template:
    metadata:
      labels:
        app: visualizations-home
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: home
          image: registry.nocovid.group/visualizations-home:latest
          ports:
            - containerPort: 80
