ci/visualizations-landing.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizations-landing
  labels:
    app: visualziations-landing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: visualizations-landing
  template:
    metadata:
      labels:
        app: visualizations-landing
    spec:
      containers:
        - name: landing
          image: registry.nocovid.group/landing:latest
          ports:
            - containerPort: 80
