ci/visualizations-home.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: visualizations-home
spec:
  type: ClusterIP
  selector:
    app: visualizations-home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
