ci/visualizations-home.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizations-home
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: nocovid.group
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: visualizations-home
                port:
                  number: 80
